[gd_scene load_steps=5 format=3 uid="uid://bfrgurl4l8jbg"]

[ext_resource type="Script" uid="uid://cvddy58ppvfcf" path="res://Scripts/UI/UnlockText.gd" id="1_4o00u"]

[sub_resource type="Animation" id="Animation_2l3v6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ctr0e"]
resource_name = "anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.78, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dlvpv"]
_data = {
&"RESET": SubResource("Animation_2l3v6"),
&"anim": SubResource("Animation_ctr0e")
}

[node name="UnlockText" type="Label" groups=["UnlockText"]]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(120, 12.5)
theme_override_font_sizes/font_size = 8
text = "adasd"
horizontal_alignment = 1
script = ExtResource("1_4o00u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dlvpv")
}
speed_scale = 3.0

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
